# maze-navigation

./: .gitignore  README.md  pyproject.toml  unistall.sh
src/mazenavigation/: __init__.py  _zipfilewrapper.py  agent.py  exploration.py  interactionstrategies.py  maze.py  plots.py  stoppingcriterions.py  utils.py  weightsassignament.py
tests/: test_explore.py  test_maze.py
