[build-system]
requires = [
  "setuptools>=61.0"
]
build-backend = "setuptools.build_meta"

[project]
name = "mazenavigation"
version = "0.0.2"
license = {file = "LICENSE"}
authors = [

]
keywords = []
description = ""
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
 "Programming Language :: Python :: 3",
 "License :: OSI Approved :: MIT License",
 "Operating System :: OS Independent",
]
dependencies = [
  "matplotlib>=3.7.4",
  "numpy>=1.24.3",
  "pandas>=2.2.2",
  "mrmr_selection"
]

